@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.revolve" version="0.5.0" name="Revolve" provider-name="ransomed, mKo, relyter, Malthus">
+<addon id="skin.revolve" version="1.0.0~beta1" name="Revolve" provider-name="ransomed, mKo, relyter, Malthus">
 	<requires>
 		<import addon="xbmc.gui" version="5.0.1"/>
+        <import addon="script.cu.lrclyrics" version="2.0.12" optional="true"/>
+        <import addon="script.rss.editor" version="2.0.4" optional="true"/>
+        <import addon="script.tv.show.next.aired" version="6.0.12" optional="true"/>
+        <import addon="service.library.data.provider" version="0.0.6" optional="true"/>
+        <import addon="service.scrobbler.lastfm" version="0.0.4" optional="true"/>
+        <import addon="service.skin.widgets" version="0.0.29" optional="true"/>
 	</requires>
-	
+
 	<extension point="xbmc.gui.skin" defaultthemename="textures.xbt" debugging="false" effectslowdown="1.0">
 		<res width="1920" height="1080" aspect="16:9" default="true" folder="1080i" />
 	</extension>
 	
 	<extension point="xbmc.addon.metadata">
-		<platform>all</platform>
-		<summary>Revolve is a skin centered around revolution.</summary>
-		<description>Revolve is a skin centered around revolution (menus, lists and views rotate and spin).[CR][CR]
-        Revolve is nog designed for mouse- or touch-control.[CR][CR]
+        <language>en</language>
+		<summary lang="en">Revolve is a skin centered around revolution.</summary>
+		<description lang="en">Revolve is a skin centered around revolution (menus, lists and views rotate and spin).[CR][CR]
+        Revolve is not designed for mouse- or touch-control.[CR][CR]
         Concept and graphics by ransomed, additional graphics by Malthus / Skin by ransomed, mKo, relyter, and Malthus. Foundation (skin) by Hitcher, and textures courtesy of Jezz_X.</description>
+        <disclaimer lang="en"></disclaimer>
+		<platform>all</platform>
+        <license></license>
+        <forum></forum>
+        <website></website>
+        <email></email>
+        <source>https://github.com/Malthus/skin.revolve/</source>
 	</extension>
 </addon>
