@@ -1,4 +1,9 @@
-﻿[B]0.5.0[/B]
+﻿[B]1.0.0~beta1[/B]
+
+- Improved the information about Revolve in addon.xml.
+- Fixed some bugs.
+
+[B]0.5.0[/B]
 
 - Fixed some bugs.
 
